# mines

./: CMakeLists.txt  README.md
src/: main_c.cpp
src/interface/: console.cpp  console.h  exception.h
src/model/: board.cpp  board.h  difficulty.hpp  exception.h  game.cpp  game.hpp
